Advice people to run autoreconf after git checkout.

--- a/readme
+++ b/readme
@@ -9,7 +9,7 @@ tests:    example RtMidi programs
 
 On unix systems, type "./configure" in the top level directory, then "make" in the tests/ directory to compile the test programs.  In Windows, open the Visual C++ workspace file located in the tests/ directory.
 
-If you checked out the code from git, please run "autoconf" before "./configure".
+If you checked out the code from git, please run "autoreconf" before "./configure".
 
 OVERVIEW:
 
